@@ -14,6 +14,9 @@ small - this just lets others know that the file has changed if nothing
 else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 
+Remove new lines in town portal messages.
+Nicolas Weeger 2010-08-16
+
 Fix container-related crash, when a plugin removes the container or equivalent.
 Nicolas Weeger 2010-08-16
 
